--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy AWS CDK
+name: Deploy AWS CDK Stack
 
 on:
   push:
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-        with:
-            path: .
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -24,7 +22,7 @@ jobs:
       - name: Install AWS CDK
         run: npm install -g aws-cdk
 
-      - name: Install project dependencies
+      - name: Install dependencies
         run: npm install
 
       - name: Configure AWS credentials
@@ -34,38 +32,35 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Determine deployment environment
-        id: env
+      - name: Determine environment
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "STACK_ENV=prod" >> $GITHUB_ENV
+            echo "ENV_NAME=prod" >> $GITHUB_ENV
           else
             echo "STACK_ENV=dev" >> $GITHUB_ENV
+            echo "ENV_NAME=dev" >> $GITHUB_ENV
           fi
 
-      - name: Bootstrap  CDK (if required)
+      - name: CDK Bootstrap (safe for reuse)
         run: |
-          cdk bootstrap aws://162040854450/ap-south-1 || echo "CDK already bootstrapped"
+          cdk bootstrap aws://$AWS_ACCOUNT_ID/${{ secrets.AWS_REGION }} || echo "Already bootstrapped"
 
-
-      - name: Synthesize CloudFormation template
+      - name: Synthesize CDK app
         run: cdk synth
 
-      - name: Get CDK Stack Name from Synthesized Output
-        run: echo "STACK_NAME=$(cdk synth | grep -oP '(?<=AWS::CloudFormation::Stack").*' | head -n 1)" >> $GITHUB_ENV
-
-      - name: Get environment (Dev or Prod)
-        run: echo "ENV_NAME=${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}" >> $GITHUB_ENV
-
-      - name: Check for  Changes
+      - name: Get stack name
         run: |
-            if cdk diff | grep -q "There were no differences"; then
-              echo "No changes detected, skipping deployment."
-            else
-              echo "Changes detected, deploying..."
-              cdk deploy $STACK_NAME -c env=$ENV_NAME --require-approval never
-            fi
+          STACK_NAME=$(cdk list | grep $STACK_ENV | head -n 1)
+          echo "STACK_NAME=$STACK_NAME" >> $GITHUB_ENV
+          echo "Deploying stack: $STACK_NAME"
 
-      
-
-      
+      - name: Deploy if changes detected
+        run: |
+          echo "Checking changes for $STACK_NAME"
+          if cdk diff $STACK_NAME | grep -q "There were no differences"; then
+            echo "✅ No changes. Skipping deployment."
+          else
+            echo "🚀 Changes detected. Deploying..."
+            cdk deploy $STACK_NAME --require-approval never -c env=$ENV_NAME
+          fi
